--- a/psd-implement/page-001/index.html
+++ b/psd-implement/page-001/index.html
@@ -2,31 +2,226 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<title>dev</title>
+	<title>Progress</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/swiper-3.4.2.min.css">
+	<style>
+		.swiper-container {
+		    width: 600px;
+		    height: 300px;
+		}
+	</style>
 </head>
 <body>
-
-	<header class="header">
-		
+	<header class="header clearfix">
+		<div class="container">
+			<h1 class="logo">
+				<a href="javascript:void(0)">progress</a>
+			</h1>
+			<div class="slogan">progress deco pte ltd</div>
+			<div class="menu">
+				<ul>
+					<li><a href="javascript:void(0)">home</a></li>
+					<li><a href="javascript:void(0)">company profile</a></li>
+					<li class="dropdown">
+						<a href="javascript:void(0)">services</a>
+						<ul class="dropdown-menu">
+							<li>
+								<a href="javascript:void(0)">aluminium compoiste</a>
+							</li>
+							<li>
+								<a href="javascript:void(0)">polycarbonate</a>
+							</li>
+							<li>
+								<a href="javascript:void(0)">outdoor sunscreen</a>
+							</li>
+							<li style="display: inline-block;"">
+								<a href="javascript:void(0)">canopy</a>
+							</li>
+							<li>
+								<a href="javascript:void(0)">retractable awning</a>
+							</li>
+							<li>
+								<a href="javascript:void(0)">galss</a>
+							</li>
+						</ul>
+					</li>
+					<li><a href="javascript:void(0)">project gallery</a></li>
+					<li><a href="javascript:void(0)">job reference</a></li>
+					<li><a href="javascript:void(0)">contact us</a></li>
+				</ul>
+			</div>
+		</div>
 	</header>
 
 	<section class="banner">
-		
+		<div class="swiper-container">
+		    <div class="swiper-wrapper">
+		        <div class="swiper-slide">
+		        	<img src="img/swiper-1.jpg" alt="slider-1">
+		        	<div class="slider-content">
+		        		<p>Welcome to</p>
+		        		<h2>Progress Deco PTE LTD</h2>
+		        		<div class="description">
+		        			Progress Deco Pte Ltd ...
+		        		</div>
+		        		<a class="more" href="javascript:void(0)">view detail</a>
+		        	</div>
+		        </div>
+		        <div class="swiper-slide">
+			        <img src="img/swiper-2.jpg" alt="slider-2">
+		        	<div class="slider-content">
+		        		<p>Welcome to</p>
+		        		<h2>Progress Deco PTE LTD</h2>
+		        		<div class="description">
+		        			Progress Deco Pte Ltd ...
+		        		</div>
+		        		<a class="more" href="javascript:void(0)">view detail</a>
+		        	</div>
+			    </div>
+		        <div class="swiper-slide">
+		        	<img src="img/swiper-3.jpg" alt="slider-3">
+		        	<div class="slider-content">
+		        		<p>Welcome to</p>
+		        		<h2>Progress Deco PTE LTD</h2>
+		        		<div class="description">
+		        			Progress Deco Pte Ltd ...
+		        		</div>
+		        		<a href="javascript:void(0)" class="more">view detail</a>
+		        	</div>
+		        </div>
+		    </div>
+		    <!-- 如果需要导航按钮 -->
+		    <div class="swiper-button-prev"></div>
+		    <div class="swiper-button-next"></div>
+		</div>
 	</section>
 
 	<main class="main">
 		
 	</main>
 
+	<section class="main-info">
+		<div class="container">
+			<div class="block block-service">
+				<div class="block-header">
+					<h3>our services</h3>
+					<div class="swiper-container">
+					    <div class="swiper-wrapper">
+					        <div class="swiper-slide">
+					        	<figure>
+					        		<img src="img/service-1.jpg" alt="service-1">
+					        		<figcaption>
+					        			<h3>Aluminium Composite</h3>
+					        			<div class="info">
+					        				Aluminium Composite Panel can fully shield
+					        				you away from the rain and sunlight...
+					        			</div>
+						        		<a href="javascript:void(0)" class="more">view detail</a>
+					        		</figcaption>
+					        	</figure>
+					        </div>
+					        <div class="swiper-slide">
+					        	<figure>
+					        		<img src="img/service-2.jpg" alt="service-2">
+					        		<figcaption>
+					        			<h3>Aluminium Composite</h3>
+					        			<div class="info">
+					        				Aluminium Composite Panel can fully shield
+					        				you away from the rain and sunlight...
+					        			</div>
+						        		<a href="javascript:void(0)" class="more">view detail</a>
+					        		</figcaption>
+					        	</figure>
+					        </div>
+					        <div class="swiper-slide">
+					        	<figure>
+					        		<img src="img/service-3.jpg" alt="service-3">
+					        		<figcaption>
+					        			<h3>Aluminium Composite</h3>
+					        			<div class="info">
+					        				Aluminium Composite Panel can fully shield
+					        				you away from the rain and sunlight...
+					        			</div>
+						        		<a href="javascript:void(0)" class="more">view detail</a>
+					        		</figcaption>
+					        	</figure>
+					        </div>
+					        <div class="swiper-slide">
+					        	<figure>
+					        		<img src="img/service-4.jpg" alt="service-4">
+					        		<figcaption>
+					        			<h3>Aluminium Composite</h3>
+					        			<div class="info">
+					        				Aluminium Composite Panel can fully shield
+					        				you away from the rain and sunlight...
+					        			</div>
+						        		<a href="javascript:void(0)" class="more">view detail</a>
+					        		</figcaption>
+					        	</figure>
+					        </div>
+					    </div>
+					    
+					    <!-- 如果需要导航按钮 -->
+					    <div class="swiper-button-prev"></div>
+					    <div class="swiper-button-next"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section class="footer-info">
-		
+		<div class="container">
+			<div class="block block-progress clearfix">
+				<div class="block-header">
+					<h3>about progress deco</h3>
+				</div>
+				<div class="block-body">
+					<ul>
+						<li><a href="javascript:void(0)"><img src="img/logo-1.jpg" alt="logo-1"></a></li>
+						<li><a href="javascript:void(0)"><img src="img/logo-2.jpg" alt="logo-2"></a></li>
+						<li><a href="javascript:void(0)"><img src="img/logo-3.jpg" alt="logo-3"></a></li>
+						<li><a href="javascript:void(0)"><img src="img/logo-4.jpg" alt="logo-4"></a></li>
+						<li><a href="javascript:void(0)"><img src="img/logo-5.jpg" alt="logo-5"></a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="block block-contact">
+				<div class="block-header">
+					<h3>contact us</h3>
+				</div>
+				<div class="block-body">
+					<ul>
+						<li><i class="icon-home"></i>5050 Ang Mo Kio Industrial Park 2, #01-1007, (S)569553</li>
+						<li><i class="icon-phone"></i>+65 6756 1008</li>
+						<li><i class="icon-email"></i><a href="mailto:sales@progress-deco.com.sg" class="email">sales@progress-deco.com.sg</a></li>
+						<li><i class="icon-website"></i><a href="http://www.progress-deco.com.sg" class="website">http://www.progress-deco.com.sg</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<footer class="footer">
-		
+		<div class="container">
+			<p class="copyright">Copyright © 2014 Progress Deco Pte Ltd. All rights reserved. Web Designed by K&amp;Co Media</p>
+		</div>
 	</footer>
 
+
+	<!-- js lib -->
+	<script src="js/swiper-3.4.2.min.js"></script>
+	<script>
+		// 初始化swiper
+		var mySwiper = new Swiper ('.swiper-container', {
+		    direction: 'horizontal',  // or 'vertical'
+		    loop: true,
+		    // 如果需要前进后退按钮
+		    nextButton: '.swiper-button-next',
+		    prevButton: '.swiper-button-prev',
+	  })
+	</script>
 </body>
 </html>
