nav bar implement

--- a/psd-implement/page-001/index.html
+++ b/psd-implement/page-001/index.html
@@ -20,7 +20,7 @@
 				<a href="javascript:void(0)">progress</a>
 			</h1>
 			<div class="slogan">progress deco pte ltd</div>
-			<div class="menu">
+			<nav class="menu">
 				<ul>
 					<li><a href="javascript:void(0)">home</a></li>
 					<li><a href="javascript:void(0)">company profile</a></li>
@@ -51,7 +51,7 @@
 					<li><a href="javascript:void(0)">job reference</a></li>
 					<li><a href="javascript:void(0)">contact us</a></li>
 				</ul>
-			</div>
+			</nav>
 		</div>
 	</header>
 
